just try to write some code for practice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=project
+
+
+# MyBatis 필드명 자동 변환 (snake_case -> camelCase)
+mybatis.configuration.map-underscore-to-camel-case=true
