just practice for programming,self study

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=project
 
+# MyBatis 필드명 자동 변환 (snake_case -> camelCase)
+mybatis.configuration.map-underscore-to-camel-case=true
+spring.datasource.url=jdbc:mysql://localhost:3306/silo
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
